# faster-clip

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: auth.py  chat_lock.py  config.py  crypto.py  database.py  logging_config.py  main.py  rate_limit.py  security_headers.py  utils.py
backend/app/api/: _common.py  chat.py  clips.py  settings.py  subtitles.py  tasks_crud.py
backend/app/models/: task.py
backend/app/services/: analyzer.py  api_settings.py  asr.py  chat_service.py  ffprobe.py  line_breaker.py  settings_file.py  subtitle.py  subtitle_style.py  tool_executor.py  transcript_validator.py  workflow_runtime.py
backend/app/tools/: __init__.py  base.py
backend/app/tools/kernel/: burn_subtitles.py  extract_embedded_subtitles.py  ffmpeg_export.py  generate_thumbnail.py  get_task_status.py  llm_analyze.py  merge_segments.py  parse_subtitle_file.py  probe_video.py  run_asr.py  split_segment.py  update_segment.py
backend/app/tools/user/: __init__.py  add_clip.py  analyze_highlights.py  apply_subtitle_style.py  delete_clip.py  edit_transcript.py  export_clips.py  get_export_progress.py  get_transcript.py  refine_clips.py  regenerate_subtitles.py  run_asr.py  search_transcript.py
backend/app/worker/: celery_app.py  pipeline.py
backend/data/presets/: subtitle_styles.json
backend/tests/: conftest.py  test_api_settings_route.py  test_asr_client.py  test_auth.py  test_backend_dockerfile.py  test_celery_tasks.py  test_chat_service.py  test_cleanup.py  test_clip_subtitles.py  test_confidence_endpoint.py  test_config.py  test_database_adapter.py  test_database_core.py  test_export_window.py  test_ffprobe_validation.py  test_generate_srt.py  test_key_safety.py  test_key_security.py  test_line_breaker.py  test_llm_client.py  test_media_smoke.py  test_new_tools.py  test_pipeline.py  test_routes.py  test_subtitle.py  test_subtitle_style.py  test_task_management.py  test_thumbnail.py  test_tool_runtime.py  test_tools.py  test_transcript_endpoint.py  test_transcript_validator.py  test_validate_clips.py
data/: settings.example.json
data/presets/: api_providers.json
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  server.js  vite.config.ts
frontend/e2e/: ai-chat.spec.ts  home-ai-first.spec.ts  subtitle-editor.spec.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  settingsApi.test.ts
frontend/src/auth/: index.ts
frontend/src/components/: AuthGate.tsx  ChatPanel.test.ts  ChatPanel.tsx  ClipCard.test.tsx  ClipCard.tsx  ClipEditPanel.tsx  ClipPreviewModal.test.ts  ClipPreviewModal.tsx  ClipSubtitleTrack.tsx  ConfigPanel.tsx  ConfirmDialog.tsx  DraggableSubtitleOverlay.tsx  ErrorBoundary.tsx  Layout.tsx  LoadingSpinner.tsx  MarkdownRenderer.tsx  SettingsModal.tsx  Sidebar.tsx  SubtitleBrowserModal.tsx  SubtitleEditorModal.tsx  SubtitleList.tsx  SubtitleTimeline.tsx  Toast.tsx  TranscriptPanel.tsx  UploadZone.tsx  VideoPlayer.tsx
frontend/src/context/: SettingsContext.tsx
(+18 files in other folders)
