[project]
name = "live-clipper"
version = "0.1.0"
description = "直播切片助手 — video clipping assistant"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B904", # existing HTTPException/StageError raises intentionally omit chaining
    "C408", # existing code uses dict() for readability in a few places
    "E402", # existing modules use local/import-after-setup patterns
    "E741", # existing subtitle helpers use short loop variables
    "F401", # existing modules keep some imports for side-effect/type stability
    "F841", # existing tests and app code keep named intermediates/mocks
    "N801", # existing public exception names are API-compatible
    "N806", # existing local constants are intentionally uppercase
    "N818", # existing public exception names do not all end in Error
    "SIM102", # avoid broad style-only rewrites during feature work
    "SIM105", # avoid broad style-only rewrites during feature work
    "SIM108", # avoid broad style-only rewrites during feature work
    "SIM110", # avoid broad style-only rewrites during feature work
    "SIM115", # avoid broad style-only rewrites during feature work
    "UP037", # quoted annotations are harmless and used in existing style
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011", # legacy tests use assert False in exception checks
    "F841", # legacy tests keep named mocks for readability
    "I001", # many tests use local imports to avoid app startup side effects
    "N818", # test doubles may not use Error suffix
    "SIM105", # legacy tests use explicit try/except/pass
    "SIM108", # legacy tests keep branchy setup for readability
]

[tool.pytest.ini_options]
markers = [
    "mysql: tests that require a live MySQL database",
]
